--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <li data-cat="?" style="padding:5px 12px; border:1px solid #007bff; border-radius:5px; cursor:pointer; background:#007bff; color:white;">?</li>
   </ul>
   
-  <input type="text" id="keyword" placeholder="키워드입력(예:안양천,공중전화,안전조치 등)" />
+  <input type="text" id="keyword" placeholder="키워드입력(예:안양천 9-2, 공중전화, 안전조치 등)" />
   <div style="display:flex; justify-content:center; gap:5px; max-width:350px; margin:5px auto;">
   <button onclick="searchAndShow()" 
     style="flex:1; padding:6px 8px; font-size:14px; border:1px solid #007bff; background:#007bff; color:white; border-radius:5px; cursor:pointer;">
@@ -431,4 +431,5 @@ window.onload=()=>{ initMap(); showUpcomingPatrols(); setInterval(showUpcomingPa
 
 </body>
 </html>
+
 
