--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ function showUpcomingPatrols(){
       const id = item.task.id;
       if(!lampData[id]){ alert("해당 ID의 좌표 정보가 없습니다."); return; }
       const pos=parseCoords(lampData[id].좌표);
-      window.open(`https://www.google.com/maps/dir/?api=1&destination=${pos.lat},${pos.lng}`,"_blank");
+      window.open(`https://map.kakao.com/link/to/${encodeURIComponent(item.task.id)},${pos.lat},${pos.lng}`,"_blank");
     };
     list.appendChild(li);
   });
@@ -289,14 +289,25 @@ document.getElementById("copyRouteBtn").addEventListener("click", () => {
     return;
   }
 
-  const [lat, lng] = lastClickedCoord.split(",");
-  const gmapsUrl = `https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}`;
+  const [destLat, destLng] = lastClickedCoord.split(",");
 
-  navigator.clipboard.writeText(gmapsUrl).then(() => {
-    alert(`✅ Google Maps 길찾기 URL이 복사되었습니다:\n${gmapsUrl}\n\n이제 카카오톡으로 공유할 수 있습니다.`);
-  }).catch(err => {
-    alert("⚠️ URL 복사 실패: " + err);
-  });
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(pos => {
+      const startLat = pos.coords.latitude.toFixed(6);
+      const startLng = pos.coords.longitude.toFixed(6);
+
+      const kakaoUrl = `https://map.kakao.com/?sName=내위치&sX=${startLng}&sY=${startLat}&eName=선택한위치&eX=${destLng}&eY=${destLat}`;
+      navigator.clipboard.writeText(kakaoUrl).then(() => {
+        alert(`✅ 카카오맵 길찾기 URL이 복사되었습니다:\n${kakaoUrl}`);
+      });
+    }, () => {
+      alert("현위치를 가져올 수 없어 목적지 링크만 복사합니다.");
+      const fallbackUrl = `https://map.kakao.com/link/to/선택한위치,${destLat},${destLng}`;
+      navigator.clipboard.writeText(fallbackUrl).then(() => {
+        alert(`✅ 복사 완료:\n${fallbackUrl}`);
+      });
+    });
+  }
 });
 
 /* ✅ 검색 */
@@ -372,9 +383,38 @@ function resetSearch() {
 
 /* ✅ 길찾기 버튼 */
 function navigateToPatrol(){
-  if(!lastClickedCoord){ alert("⚠️ 먼저 지도를 클릭하여 목적지를 선택하세요."); return; }
-  const [lat,lng]=lastClickedCoord.split(",");
-  window.open(`https://www.google.com/maps/dir/?api=1&destination=${lat},${lng}`,"_blank");
+  if(!lastClickedCoord){ 
+    alert("⚠️ 먼저 지도를 클릭하여 목적지를 선택하세요."); 
+    return; 
+  }
+
+  const [destLat, destLng] = lastClickedCoord.split(",");
+
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(pos => {
+      const startLat = pos.coords.latitude.toFixed(6);
+      const startLng = pos.coords.longitude.toFixed(6);
+
+      const appUrl = `kakaomap://route?sp=${startLat},${startLng}&ep=${destLat},${destLng}&by=CAR`;
+      const webUrl = `https://map.kakao.com/link/to/선택한위치,${destLat},${destLng}`;
+
+      // 모바일이면 앱 우선, 아니면 웹
+      if (/Android|iPhone|iPad/i.test(navigator.userAgent)) {
+        window.location.href = appUrl;
+        setTimeout(() => window.open(webUrl, "_blank"), 1500); // 앱 미설치 시 웹 열기
+      } else {
+        window.open(webUrl, "_blank");
+      }
+    }, () => {
+      alert("현위치를 가져올 수 없습니다. 웹으로 이동합니다.");
+      const fallbackUrl = `https://map.kakao.com/link/to/선택한위치,${destLat},${destLng}`;
+      window.open(fallbackUrl, "_blank");
+    });
+  } else {
+    alert("위치 정보를 사용할 수 없습니다.");
+    const fallbackUrl = `https://map.kakao.com/link/to/선택한위치,${destLat},${destLng}`;
+    window.open(fallbackUrl, "_blank");
+  }
 }
 
 /* ✅ 📌 순찰 완료 → 로그 파일에 append */
@@ -431,5 +471,4 @@ window.onload=()=>{ initMap(); showUpcomingPatrols(); setInterval(showUpcomingPa
 
 </body>
 </html>
-
 
