--- a/index.html
+++ b/index.html
@@ -192,38 +192,42 @@ document.getElementById("copyRouteBtn").addEventListener("click",()=>{
     .catch(()=>alert("❌ 클립보드 복사 실패"));
 });
 
-function searchAndShow(){
-  const kw=document.getElementById("keyword").value.trim();
-  if(!kw){ alert("⚠️ 키워드 입력하세요."); return; }
+function searchAndShow() {
+  const kw = document.getElementById("keyword").value.trim();
+  if (!kw) { alert("⚠️ 키워드 입력하세요."); return; }
   searchMode = true;
   clearMarkers();
 
-  const kwLower = kw.toLowerCase().replace(/\s+/g,"");
-  if(kwLower.length<2){ alert("⚠️ 최소 2글자 이상 입력"); return; }
+  // 입력값 정규화: 소문자 + 공백, 특수문자 제거
+  const normalizeSimple = str => (str || "").toLowerCase().replace(/[\s\-\_\.,\/\(\)\[\]#]/g, "");
 
-  const normalizeSimple = str => (str||"").toLowerCase().replace(/[\s\-\_\.,\/\(\)\[\]#]/g,"");
-  const kwNormalized = normalizeSimple(kwLower);
+  const kwNormalized = normalizeSimple(kw);
+  if (kwNormalized.length < 2) { alert("⚠️ 최소 2글자 이상 입력"); return; }
 
-  // 정규식: 입력값에 있는 공백을 .* 로 변환 → '안 천' => /안.*천/
-  const kwRegex = new RegExp(kw.replace(/\s+/g, '.*'), 'i');
+  // **핵심: 입력 글자를 하나씩 나눠서 .* 넣기 → '안천' → /안.*천/
+  const kwRegex = new RegExp(kwNormalized.split("").join(".*"), "i");
 
-  const res = Object.keys(lampData).filter(id=>{
-    const d=lampData[id];
-    const fields=[d.고유이름,d.전화번호,d.주소,d.분류,d.특이사항];
-    return fields.some(field=>{
-      const text=(field||"");
-      const textNorm=normalizeSimple(text);
-      return text.match(kwRegex) || text.toLowerCase().includes(kwLower) || textNorm.includes(kwNormalized);
+  const res = Object.keys(lampData).filter(id => {
+    const d = lampData[id];
+    const fields = [d.고유이름, d.전화번호, d.주소, d.분류, d.특이사항];
+
+    return fields.some(field => {
+      const text = (field || "");
+      const textNorm = normalizeSimple(text);
+      return (
+        kwRegex.test(textNorm) ||  // '안천' → '안양천' 매칭
+        textNorm.includes(kwNormalized) // 단순 포함 체크
+      );
     });
-  }).map(id=>({id,pos:parseCoords(lampData[id].좌표)}));
+  }).map(id => ({ id, pos: parseCoords(lampData[id].좌표) }));
 
-  if(res.length===0){ alert("❌ 검색 결과 없음"); return; }
+  if (res.length === 0) { alert("❌ 검색 결과 없음"); return; }
 
-  const bounds=new google.maps.LatLngBounds();
-  res.forEach(r=>{ addMarker(r.id,r.pos,"blue"); bounds.extend(r.pos); });
+  const bounds = new google.maps.LatLngBounds();
+  res.forEach(r => { addMarker(r.id, r.pos, "blue"); bounds.extend(r.pos); });
   map.fitBounds(bounds);
 }
-
+  
 function resetSearch(){
   searchMode=false; clearMarkers(); document.getElementById("keyword").value="";
   lastClickedCoord=""; document.getElementById("clickedCoords").innerText="📍";
@@ -278,5 +282,6 @@ document.addEventListener("DOMContentLoaded",()=>{
 </script>
 </body>
 </html>
+
 
 
