--- a/index.html
+++ b/index.html
@@ -73,18 +73,48 @@ function parseCoords(s){ const [lat,lng]=s.split(",").map(Number); return [lat,l
 function pad(n){ return n.toString().padStart(2,"0"); }
 
 function addMarker(id, pos, color="blue") {
-  const icon = L.icon({iconUrl:`http://maps.google.com/mapfiles/ms/icons/${color}-dot.png`, iconSize:[32,32], iconAnchor:[16,32]});
+  const icon = L.icon({
+    iconUrl:`http://maps.google.com/mapfiles/ms/icons/${color}-dot.png`,
+    iconSize:[32,32],
+    iconAnchor:[16,32]
+  });
+
   const m = L.marker(pos, {title:id, icon: icon});
+
   m.on('click', ()=>{
-    const data=lampData[id];
-    lastClickedCoord=data.좌표;
-    document.getElementById("clickedCoords").innerText=`📍 선택: ${lastClickedCoord}`;
+    const data = lampData[id]; // lampData[id] 객체 가져오기
+    lastClickedCoord = data.좌표;
+    document.getElementById("clickedCoords").innerText = `📍 선택: ${lastClickedCoord}`;
 
     // 마커 색상 변경
-    if(selectedMarker) selectedMarker.setIcon(L.icon({iconUrl:`http://maps.google.com/mapfiles/ms/icons/blue-dot.png`, iconSize:[32,32], iconAnchor:[16,32]}));
-    m.setIcon(L.icon({iconUrl:`http://maps.google.com/mapfiles/ms/icons/red-dot.png`, iconSize:[32,32], iconAnchor:[16,32]}));
+    if(selectedMarker) {
+      selectedMarker.setIcon(L.icon({
+        iconUrl:`http://maps.google.com/mapfiles/ms/icons/blue-dot.png`,
+        iconSize:[32,32],
+        iconAnchor:[16,32]
+      }));
+    }
+    m.setIcon(L.icon({
+      iconUrl:`http://maps.google.com/mapfiles/ms/icons/red-dot.png`,
+      iconSize:[32,32],
+      iconAnchor:[16,32]
+    }));
     selectedMarker = m;
+
+    // 팝업 내용 생성
+    const popupContent = `
+      <div style="min-width:150px;">
+        <strong>분류:</strong> ${data.분류 || ""}<br/>
+        <strong>고유이름:</strong> ${data.고유이름 || ""}<br/>
+        <strong>전화번호:</strong> ${data.전화번호 || ""}<br/>
+        <strong>주소:</strong> ${data.주소 || ""}<br/>
+        <strong>특이사항:</strong> ${data.특이사항 || ""}<br/>
+        <strong>좌표:</strong> ${data.좌표 || ""}
+      </div>
+    `;
+    m.bindPopup(popupContent).openPopup();
   });
+
   markers.addLayer(m);
 }
 
@@ -210,3 +240,4 @@ showUpcomingPatrols();
 
 </body>
 </html>
+
