--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-100% 그대로 유지한 통합 HTML입니다.
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="utf-8">
-<title>출동/순찰 시스템 (Leaflet 마커 클릭 색상 + 지도 클릭 좌표)</title>
+<title>출동/순찰 시스템 (Leaflet 마커 클릭 색상 + 지도 클릭 좌표 + 최대확대 클러스터 해제)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css"/>
@@ -70,8 +68,9 @@ let lastClickedCoord = "";
 let activeCategories = ["안전조치"];
 let activePatrol = null;
 let completedPatrols = new Set(JSON.parse(localStorage.getItem("patrol_" + new Date().toISOString().slice(0,10)) || "[]"));
-let selectedMarker = null; // 클릭된 마커 저장
-let clickMarker = null; // 지도 클릭으로 생성되는 마커 저장
+let selectedMarker = null;
+let clickMarker = null;
+const MAX_ZOOM = 19; // 최대 확대 시 클러스터 해제 기준
 
 function parseCoords(s){ const [lat,lng]=s.split(",").map(Number); return [lat,lng]; }
 function pad(n){ return n.toString().padStart(2,"0"); }
@@ -84,7 +83,6 @@ function addMarker(id, pos, color="blue") {
   });
 
   const m = L.marker(pos, {title:id, icon: icon});
-
   m.on('click', ()=> {
     const data = lampData[id];
     lastClickedCoord = data.좌표;
@@ -116,7 +114,6 @@ function addMarker(id, pos, color="blue") {
     `;
     m.bindPopup(popupContent).openPopup();
   });
-
   markers.addLayer(m);
 }
 
@@ -158,17 +155,13 @@ function resetSearch(){
   map.setView([37.3857,126.6586],15); 
 }
 
-// 지도 클릭 시 좌표 표시
+// 지도 클릭 시 좌표 표시 및 마커 추가
 map.on('click', function(e){
   const lat = e.latlng.lat.toFixed(6);
   const lng = e.latlng.lng.toFixed(6);
   lastClickedCoord = `${lat},${lng}`;
   document.getElementById("clickedCoords").innerText = `📍 선택: ${lastClickedCoord}`;
-
-  // 기존 클릭 마커 제거
   if(clickMarker) map.removeLayer(clickMarker);
-
-  // 새로운 마커 추가
   clickMarker = L.marker([lat,lng], {
     icon: L.icon({
       iconUrl: 'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
@@ -198,16 +191,11 @@ function shareKakaoLink(){
   if(!lastClickedCoord){ alert("⚠️ 먼저 좌표 선택"); return; }
   const [lat,lng] = lastClickedCoord.split(",");
   const url = `https://map.kakao.com/link/map/선택위치,${lat},${lng}`;
-
   if(/Android|iPhone|iPad/i.test(navigator.userAgent)){
     window.open(`kakaotalk://send?text=${encodeURIComponent(url)}`, "_blank");
   } else {
-    // URL 자동 복사
-    navigator.clipboard.writeText(url).then(() => {
-      alert("✅ URL이 복사되었습니다!");  // 이전 prompt 대신 복사 알림
-    }).catch(() => {
-      prompt("복사 실패! 수동 복사하세요:", url);
-    });
+    navigator.clipboard.writeText(url).then(() => { alert("✅ URL이 복사되었습니다!"); })
+    .catch(() => { prompt("복사 실패! 수동 복사하세요:", url); });
   }
 }
 
@@ -228,8 +216,7 @@ function completePatrol(){
 }
 
 function getActivePatrolSchedule(){
-  let combined=[];
-  activeCategories.forEach(cat=>{ if(patrolSchedules[cat]) combined=combined.concat(patrolSchedules[cat]); });
+  let combined=[]; activeCategories.forEach(cat=>{ if(patrolSchedules[cat]) combined=combined.concat(patrolSchedules[cat]); });
   return combined;
 }
 
@@ -255,26 +242,20 @@ function showUpcomingPatrols(){
   if(upcoming.length===0){ list.innerHTML="<li>✅ 예정 없음</li>"; return; }
   upcoming.sort((a,b)=>(a.hour*60+a.minute)-(b.hour*60+b.minute));
   upcoming.forEach(item => {
-  const li = document.createElement("li");
-  li.style.color = item.isInTime ? "blue" : "black";
-  li.textContent = `${item.task.id} - ${pad(item.hour)}:${pad(item.minute)}~${pad(item.endHour)}:${pad(item.endMinute)}`;
-
-  li.onclick = () => {
-    activePatrol = { task: item.task, hour: item.hour, minute: item.minute, key: item.key };
-    
-    // 선택한 순찰 대상의 좌표 가져오기
-    const patrolId = item.task.id;
-    const data = lampData[patrolId];
-    if (!data || !data.좌표) { alert("⚠️ 좌표 정보 없음"); return; }
-    lastClickedCoord = data.좌표;
-    document.getElementById("clickedCoords").innerText = `📍 선택: ${lastClickedCoord}`;
-
-    // 바로 길찾기 실행
-    navigateToPatrol();
-  };
-
-  list.appendChild(li);
- });
+    const li = document.createElement("li");
+    li.style.color = item.isInTime ? "blue" : "black";
+    li.textContent = `${item.task.id} - ${pad(item.hour)}:${pad(item.minute)}~${pad(item.endHour)}:${pad(item.endMinute)}`;
+    li.onclick = () => {
+      activePatrol = { task: item.task, hour: item.hour, minute: item.minute, key: item.key };
+      const patrolId = item.task.id;
+      const data = lampData[patrolId];
+      if (!data || !data.좌표) { alert("⚠️ 좌표 정보 없음"); return; }
+      lastClickedCoord = data.좌표;
+      document.getElementById("clickedCoords").innerText = `📍 선택: ${lastClickedCoord}`;
+      navigateToPatrol();
+    };
+    list.appendChild(li);
+  });
 }
 
 document.querySelectorAll("#categoryList li").forEach(li=>{
@@ -296,10 +277,31 @@ document.getElementById("upcomingPanel").addEventListener("click",e=>{
 });
 
 showUpcomingPatrols();
+
+// 최대 확대 시 클러스터 해제 기능
+function updateClusterOnZoom(){
+  const currentZoom = map.getZoom();
+  if(currentZoom >= MAX_ZOOM){
+    // 최대 확대 → 클러스터 제거 후 마커 개별 표시
+    if(map.hasLayer(markers)) map.removeLayer(markers);
+    markers.clearLayers();
+    Object.keys(lampData).forEach(id=>{
+      const pos = parseCoords(lampData[id].좌표);
+      addMarker(id,pos);
+    });
+  } else {
+    // 클러스터 재적용
+    markers.clearLayers();
+    Object.keys(lampData).forEach(id=>{
+      const pos = parseCoords(lampData[id].좌표);
+      addMarker(id,pos);
+    });
+    map.addLayer(markers);
+  }
+}
+map.on('zoomend', updateClusterOnZoom);
+
 </script>
 
 </body>
 </html>
-
-
-
