--- a/index.html
+++ b/index.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8" />
-  <title>특정 poi 기반 출동/순찰 시스템</title>
-  <meta http-equiv="refresh" content="300">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
-    h3 { text-align: center; background: #007bff; color: white; margin: 0; padding: 10px; }
-    #panel { padding: 10px; text-align: center; max-width: 400px; margin: 10px auto; }
-    #panel input, #panel button { width: 90%; max-width: 350px; padding: 10px; margin: 5px auto; font-size: 16px; display: block; border: 1px solid #ccc; border-radius: 5px; }
-    #map { height: 70vh; width: 100%; }
-    #clickedCoords { width: 90%; max-width: 350px; padding: 8px; margin: 5px auto; border: 1px solid #007bff; background: #eef6ff; font-size: 14px; border-radius: 5px; text-align: center; }
-    #copyRouteBtn { width: 90%; max-width: 350px; background: #ff9800; color: white; border: none; padding: 8px; border-radius: 5px; cursor: pointer; }
-    #completeBtn { background: #28a745; color: white; border: none; padding: 10px; border-radius: 5px; font-size: 16px; cursor: pointer; width: 90%; max-width: 350px; margin: 10px auto; display: block; }
-    #navigateBtn { background:#007bff; color:white; border:none; padding:10px; border-radius:5px; font-size:16px; cursor:pointer; width:90%; max-width:350px; margin:10px auto; display:block; }
-    #upcomingPanel { position: fixed; top: 10px; right: 10px; width: 250px; max-height: 60vh; overflow-y: auto; background: rgba(255,255,255,0.95); border: 1px solid #007bff; border-radius: 5px; padding: 10px; font-size: 14px; z-index: 9999; box-shadow: 2px 2px 5px rgba(0,0,0,0.2); transition: all 0.3s ease; cursor: pointer; }
-    #upcomingPanel h4 { margin: 0 0 5px; font-size: 16px; color: #007bff; }
-    #upcomingList { list-style: none; padding: 0; margin: 0; }
-    #upcomingList li { padding: 5px 8px; border-bottom: 1px solid #ddd; cursor: pointer; border-radius: 3px; user-select: none; }
-    #upcomingList li:hover { background: #eef6ff; }
-    #upcomingPanel.hidden { width: 50px; height: 40px; padding: 5px; overflow: hidden; cursor: pointer; }
-    #upcomingPanel.hidden h4, #upcomingPanel.hidden ul { display: none; }
-    #upcomingPanel.hidden::after { content: "⏰"; position: absolute; top: 10px; left: 15px; font-size: 20px; color: #007bff; }
-  </style>
-
-  <!-- lampData와 patrolSchedules는 기존 JS 파일 그대로 사용 -->
-  <script src="lampData.js"></script>
-  <script src="patrolSchedule.js"></script>
-
-  <!-- 구글 지도 API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"></script>
-
-  <!-- MarkerClusterer 라이브러리 -->
-  <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
+<meta charset="utf-8" />
+<title>특정 poi 기반 출동/순찰 시스템 (Leaflet)</title>
+<meta http-equiv="refresh" content="300">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css" />
+<link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css" />
+<style>
+  body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
+  h3 { text-align: center; background: #007bff; color: white; margin: 0; padding: 10px; }
+  #panel { padding: 10px; text-align: center; max-width: 400px; margin: 10px auto; }
+  #panel input, #panel button { width: 90%; max-width: 350px; padding: 10px; margin: 5px auto; font-size: 16px; display: block; border: 1px solid #ccc; border-radius: 5px; }
+  #map { height: 70vh; width: 100%; }
+  #clickedCoords { width: 90%; max-width: 350px; padding: 8px; margin: 5px auto; border: 1px solid #007bff; background: #eef6ff; font-size: 14px; border-radius: 5px; text-align: center; }
+  #copyRouteBtn { width: 90%; max-width: 350px; background: #ff9800; color: white; border: none; padding: 8px; border-radius: 5px; cursor: pointer; }
+  #completeBtn { background: #28a745; color: white; border: none; padding: 10px; border-radius: 5px; font-size: 16px; cursor: pointer; width: 90%; max-width: 350px; margin: 10px auto; display: block; }
+  #navigateBtn { background:#007bff; color:white; border:none; padding:10px; border-radius:5px; font-size:16px; cursor:pointer; width:90%; max-width:350px; margin:10px auto; display:block; }
+  #upcomingPanel { position: fixed; top: 10px; right: 10px; width: 250px; max-height: 60vh; overflow-y: auto; background: rgba(255,255,255,0.95); border: 1px solid #007bff; border-radius: 5px; padding: 10px; font-size: 14px; z-index: 9999; box-shadow: 2px 2px 5px rgba(0,0,0,0.2); transition: all 0.3s ease; cursor: pointer; }
+  #upcomingPanel h4 { margin: 0 0 5px; font-size: 16px; color: #007bff; }
+  #upcomingList { list-style: none; padding: 0; margin: 0; }
+  #upcomingList li { padding: 5px 8px; border-bottom: 1px solid #ddd; cursor: pointer; border-radius: 3px; user-select: none; }
+  #upcomingList li:hover { background: #eef6ff; }
+  #upcomingPanel.hidden { width: 50px; height: 40px; padding: 5px; overflow: hidden; cursor: pointer; }
+  #upcomingPanel.hidden h4, #upcomingPanel.hidden ul { display: none; }
+  #upcomingPanel.hidden::after { content: "⏰"; position: absolute; top: 10px; left: 15px; font-size: 20px; color: #007bff; }
+</style>
+<script src="lampData.js"></script>
+<script src="patrolSchedule.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
 </head>
 <body>
 <h3>🚓 함께 만드는 순찰/출동 poi(신정2)</h3>
@@ -44,14 +41,13 @@
     <li data-cat="안전조치" style="padding:5px 12px; border:1px solid #007bff; border-radius:5px; cursor:pointer; background:#007bff; color:white;">안전조치</li>
     <li data-cat="?" style="padding:5px 12px; border:1px solid #007bff; border-radius:5px; cursor:pointer; background:#007bff; color:white;">?</li>
   </ul>
-  
   <input type="text" id="keyword" placeholder="키워드입력(예:안양천 9-2, 공중전화, 안전조치 등)" />
   <div style="display:flex; justify-content:center; gap:5px; max-width:350px; margin:5px auto;">
-    <button onclick="searchAndShow()" style="flex:1; padding:6px 8px; font-size:14px; border:1px solid #007bff; background:#007bff; color:white; border-radius:5px; cursor:pointer;">검색</button>
-    <button onclick="resetSearch()" style="flex:1; padding:6px 8px; font-size:14px; border:1px solid #6c757d; background:#6c757d; color:white; border-radius:5px; cursor:pointer;">초기화</button>
+    <button onclick="searchAndShow()">검색</button>
+    <button onclick="resetSearch()">초기화</button>
   </div>
   <div style="display:flex; align-items:center; justify-content:center; gap:5px; max-width:350px; margin:5px auto;">
-    <div id="clickedCoords" style="flex:1; padding:8px; border:1px solid #007bff; background:#eef6ff; font-size:14px; border-radius:5px; text-align:center;">📍</div>
+    <div id="clickedCoords">📍</div>
     <button id="copyRouteBtn">📋 위치 url 복사</button>
   </div>
   <div style="display:flex; justify-content:center; gap:10px; max-width:350px; margin:10px auto;">
@@ -71,11 +67,15 @@
 let activeCategories = ["안전조치"];
 let activePatrol = null;
 let lastClickedCoord = "";
-let map, markers = [], infoWindow, clusterer;
+let map, markers = [], markerCluster;
 let searchMode = false;
 let completedPatrols = new Set(JSON.parse(localStorage.getItem("patrol_" + new Date().toISOString().slice(0,10)) || "[]"));
 
-// 카테고리 선택
+function setActiveCategories(selectedCategories){
+  activeCategories = selectedCategories.filter(cat => patrolSchedules.hasOwnProperty(cat));
+  updatePatrolDisplay();
+}
+
 document.querySelectorAll("#categoryList li").forEach(li=>{
   li.addEventListener("click", ()=>{
     const cat = li.getAttribute("data-cat");
@@ -101,7 +101,6 @@ function updatePatrolDisplay(){ showUpcomingPatrols(); }
 function parseCoords(s){ const[a,b]=s.split(",").map(Number); return{lat:a,lng:b}; }
 function pad(n){ return n.toString().padStart(2,"0"); }
 
-// 순찰 예정 표시
 function showUpcomingPatrols(){
   const now=new Date(), nowM=now.getHours()*60+now.getMinutes();
   const list=document.getElementById("upcomingList"); list.innerHTML="";
@@ -137,49 +136,32 @@ function showUpcomingPatrols(){
   });
 }
 
-// 지도 초기화
 function initMap(){
-  map = new google.maps.Map(document.getElementById("map"), { center:{lat:37.3857,lng:126.6586}, zoom:15 });
-  infoWindow = new google.maps.InfoWindow();
+  map = L.map('map').setView([37.3857,126.6586], 15);
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', { maxZoom: 19 }).addTo(map);
+  markerCluster = L.markerClusterGroup();
+  map.addLayer(markerCluster);
+
+  map.on("click", e=>{
+    if(searchMode) return;
+    lastClickedCoord = `${e.latlng.lat.toFixed(6)},${e.latlng.lng.toFixed(6)}`;
+    document.getElementById("clickedCoords").innerText = `📍 클릭 좌표: ${lastClickedCoord}`;
+    if(window.lastClickMarker) markerCluster.removeLayer(window.lastClickMarker);
+    window.lastClickMarker = L.marker(e.latlng, { icon: L.icon({iconUrl:"https://maps.google.com/mapfiles/ms/icons/orange-dot.png", iconSize:[32,32]}) }).addTo(markerCluster);
+  });
 }
 
-// 마커 클러스터링
-function clearMarkers(){
-  if(markers.length>0){
-    markers.forEach(m=>m.setMap(null));
-    markers=[];
-    if(clusterer) clusterer.clearMarkers();
-  }
-}
+function clearMarkers(){ markerCluster.clearLayers(); markers=[]; }
 
 function addMarker(id, pos, color){
-  const m = new google.maps.Marker({
-    position: pos,
-    label: id,
-    icon: { url: `http://maps.google.com/mapfiles/ms/icons/${color}-dot.png` }
-  });
-
-  m.addListener("click", () => {
-    const data = lampData[id];
-    infoWindow.setContent(`<div style="min-width:150px;"><strong>${data.고유이름}</strong><br/><b>분류:</b> ${data.분류}<br/><b>전화번호:</b> ${data.전화번호}<br/><b>주소:</b> ${data.주소}<br/><b>특이사항:</b> ${data.특이사항}</div>`);
-    infoWindow.open(map, m);
-
-    m.setIcon(`http://maps.google.com/mapfiles/ms/icons/red-dot.png`);
-    if(window.lastClickedSearchMarker && window.lastClickedSearchMarker !== m){
-      window.lastClickedSearchMarker.setIcon(`http://maps.google.com/mapfiles/ms/icons/blue-dot.png`);
-    }
-    window.lastClickedSearchMarker = m;
-
-    lastClickedCoord = data.좌표;
+  const m = L.marker([pos.lat,pos.lng], { icon: L.icon({iconUrl:`https://maps.google.com/mapfiles/ms/icons/${color}-dot.png`, iconSize:[32,32]}) });
+  m.bindPopup(`<strong>${lampData[id].고유이름}</strong><br/><b>분류:</b> ${lampData[id].분류}<br/><b>전화번호:</b> ${lampData[id].전화번호}<br/><b>주소:</b> ${lampData[id].주소}<br/><b>특이사항:</b> ${lampData[id].특이사항}`);
+  m.on("click", ()=>{
+    lastClickedCoord = lampData[id].좌표;
     document.getElementById("clickedCoords").innerText = `📍 선택: ${lastClickedCoord}`;
   });
-
+  markerCluster.addLayer(m);
   markers.push(m);
-  if(!clusterer){
-    clusterer = new markerClusterer.MarkerClusterer({ map: map, markers: markers });
-  } else {
-    clusterer.addMarker(m);
-  }
 }
 
 // 클릭 좌표 → 카카오맵 URL 복사
@@ -192,44 +174,32 @@ document.getElementById("copyRouteBtn").addEventListener("click",()=>{
     .catch(()=>alert("❌ 클립보드 복사 실패"));
 });
 
-// 검색
+function normalizeSimple(str){ return (str||"").toLowerCase().replace(/[\s\-\_\.,\/\(\)\[\]#]/g,""); }
+
 function searchAndShow() {
   const kw = document.getElementById("keyword").value.trim();
   if (!kw) { alert("⚠️ 키워드 입력하세요."); return; }
   searchMode = true;
   clearMarkers();
 
-  const normalizeSimple = str => (str || "").toLowerCase().replace(/[\s\-\_\.,\/\(\)\[\]#]/g, "");
   const kwNormalized = normalizeSimple(kw);
-  if (kwNormalized.length < 2) { alert("⚠️ 최소 2글자 이상 입력"); return; }
-
+  if(kwNormalized.length<2){ alert("⚠️ 최소 2글자 이상 입력"); return; }
   const kwRegex = new RegExp(kwNormalized.split("").join(".*"), "i");
 
-  const res = Object.keys(lampData).filter(id => {
+  const res = Object.keys(lampData).filter(id=>{
     const d = lampData[id];
-    const fields = [d.고유이름, d.전화번호, d.주소, d.분류, d.특이사항];
-    return fields.some(field => {
-      const textNorm = normalizeSimple(field || "");
-      return kwRegex.test(textNorm) || textNorm.includes(kwNormalized);
-    });
-  }).map(id => ({ id, pos: parseCoords(lampData[id].좌표) }));
+    const fields = [d.고유이름,d.전화번호,d.주소,d.분류,d.특이사항];
+    return fields.some(f=>kwRegex.test(normalizeSimple(f)));
+  }).map(id=>({id,pos:parseCoords(lampData[id].좌표)}));
 
-  if (res.length === 0) { alert("❌ 검색 결과 없음"); return; }
-
-  const bounds = new google.maps.LatLngBounds();
-  res.forEach(r => { addMarker(r.id, r.pos, "blue"); bounds.extend(r.pos); });
+  if(res.length===0){ alert("❌ 검색 결과 없음"); return; }
+  const bounds = L.latLngBounds();
+  res.forEach(r=>{ addMarker(r.id,r.pos,"blue"); bounds.extend([r.pos.lat,r.pos.lng]); });
   map.fitBounds(bounds);
 }
 
-// 검색 초기화
-function resetSearch(){
-  searchMode=false; clearMarkers(); document.getElementById("keyword").value="";
-  lastClickedCoord=""; document.getElementById("clickedCoords").innerText="📍";
-  if(window.lastClickMarker){ window.lastClickMarker.setMap(null); window.lastClickMarker=null; }
-  map.setCenter({ lat:37.3857,lng:126.6586 }); map.setZoom(15);
-}
+function resetSearch(){ searchMode=false; clearMarkers(); document.getElementById("keyword").value=""; lastClickedCoord=""; document.getElementById("clickedCoords").innerText="📍"; }
 
-// 길찾기
 function navigateToPatrol(){
   if(!lastClickedCoord){ alert("⚠️ 먼저 지도를 클릭하여 목적지를 선택하세요."); return; }
   const [destLat,destLng]=lastClickedCoord.split(",");
@@ -242,11 +212,10 @@ function navigateToPatrol(){
         window.location.href=appUrl;
         setTimeout(()=>window.open(webUrl,"_blank"),1500);
       } else { window.open(webUrl,"_blank"); }
-    }, ()=>{ alert("현위치를 가져올 수 없습니다. 웹으로 이동합니다."); window.open(`https://map.kakao.com/link/to/선택위치,${destLat},${destLng}`,"_blank"); });
+    },()=>{ alert("현위치를 가져올 수 없습니다. 웹으로 이동합니다."); window.open(`https://map.kakao.com/link/to/선택위치,${destLat},${destLng}`,"_blank"); });
   } else { window.open(`https://map.kakao.com/link/to/선택위치,${destLat},${destLng}`,"_blank"); }
 }
 
-// 순찰 완료
 function completePatrol(){
   if(!activePatrol){ alert("🚫 진행 중인 순찰이 없습니다."); return; }
   completedPatrols.add(activePatrol.key);
@@ -264,21 +233,17 @@ function completePatrol(){
   const fileName=`patrol_log_${now.toISOString().slice(0,10)}_${now.getHours()}${now.getMinutes()}${now.getSeconds()}.txt`;
   const url=URL.createObjectURL(blob);
   const a=document.createElement("a");
-  a.href=url; a.download=fileName; a.style.display="none"; document.body.appendChild(a); a.click(); document.body.removeChild(a);
-  alert("✅ 순찰 완료 기록이 저장되었습니다.");
+  a.href=url; a.download=fileName; a.style.display="none"; document.body.appendChild(a); a.click(); document.body.removeChild(a); URL.revokeObjectURL(url);
+  alert(`✅ ${activePatrol.task.id} (${activePatrol.key.split("|")[1]}) 순찰 완료!`);
   activePatrol=null; showUpcomingPatrols();
 }
 
-// 순찰 예정 패널 접기/펼치기
-const upcomingPanel=document.getElementById("upcomingPanel");
-upcomingPanel.addEventListener("click", ()=>{
-  upcomingPanel.classList.toggle("hidden");
+document.addEventListener("DOMContentLoaded",()=>{
+  document.getElementById("upcomingPanel").addEventListener("click",e=>{
+    if(e.target.tagName.toLowerCase()!=="li") e.currentTarget.classList.toggle("hidden");
+  });
+  initMap(); updatePatrolDisplay();
 });
-
-window.onload=()=>{
-  initMap();
-  showUpcomingPatrols();
-};
 </script>
 </body>
 </html>
